2009-04-24  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: Added common/tinyxmlerror.cpp

2009-04-18  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: Added common/serverlistitem.cpp, sha1.cpp, 
	stringconv.cpp, timer.cpp

2009-04-04  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/optionintattribute.cpp, 
	common/optionintrangeattribute.cpp, common/optionlistattribute.cpp,
	optionmanager.cpp, optionpanel.cpp, options.cpp,
	optionstringattribute.cpp added.	

2009-04-04  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/objectpos.cpp, common/optionattribute.cpp,
	common/optionboolattribute.cpp, common/optionbutton.cpp,
	common/optionfloatattribute.cpp, optionfloatrangeattribute.cpp added.

2009-04-03  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/npidentification.cpp, common/objectmesh.cpp
	added.

2009-04-01  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/globaluri.cpp, common/hashfile.cpp,
	common/hashpassword.cpp ,common/httpresponse.cpp,
	common/itemlistfile.cpp added.

2009-03-31  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/ftpclient.cpp added.

2009-03-30  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/EasyBMP.cpp added.
	
2009-03-28  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlserveradd.cpp, common/curlserverdelete.cpp 
	common/curlservermodifsclients.cpp and common/curlsubmitform added.

2009-03-27  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlgetfile.cpp, common/curlinterface.cpp,
	common/curlpersoheaderadd.cpp, common/curlpersoheaderdelete.cpp
	and common/curlposteddata.cpp files added.

2009-03-26  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlaccountdelete.cpp,
	curlaccounttoggleblacklist.cpp and curlfiletocml.cpp added.

2009-03-20  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/curlaccountconfirmmail.cpp added.

2009-03-20  Jerome Pasquier  <rainbru@free.fr>
	* POTFILES.in: common/chartserie.cpp, common/clientconnect.cpp