@@ -1,4 +1,8 @@
 2009-04-24  Jerome Pasquier  <rainbru@free.fr>
+	* POTFILES.in: Added common/version.cpp, xmlaccountlist.cpp,
+	xmlattrbcatlist.cpp
+
+2009-04-24  Jerome Pasquier  <rainbru@free.fr>
 	* POTFILES.in: Added common/tinyxmlerror.cpp
 
 2009-04-18  Jerome Pasquier  <rainbru@free.fr>
